tdf#93392 leak when linking to external html data file with auto update

Change-Id: I32d96b945ad0c2a0505418a0841156600570b301